--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "await-sleep": "^0.0.1",
     "cheerio": "^1.0.0-rc.2",
     "commander": "^2.15.1",
     "express": "^4.16.3",
