--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "award-calendar",
+  "name": "flightplan",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,5 +27,6 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-mobx": "^1.0.2",
     "react-app-rewired": "^1.5.2"
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
