--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "moment": "^2.22.1",
     "puppeteer": "^1.3.0",
+    "react-spinkit": "^3.0.0",
     "sqlite": "^2.9.1",
     "syncprompt": "^2.0.0"
   },
