--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "commander": "^2.15.1",
     "express": "^4.16.3",
     "moment": "^2.22.1",
-    "puppeteer": "^1.3.0",
+    "puppeteer": "^1.5.0-next.1530061501767",
     "react-spinkit": "^3.0.0",
     "sqlite": "^2.9.1",
     "syncprompt": "^2.0.0"
