--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "flightplan-tool",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Search for award inventory using Node.js and Headless Chrome!",
   "main": "src/index.js",
   "bin": {
     "flightplan": "bin/flightplan.js"
   },
   "scripts": {
+    "postinstall": "cd client && yarn",
     "client": "cd client && yarn start",
     "server": "nodemon bin/flightplan-server.js",
     "dev": "concurrently --kill-others-on-fail -p \"[{name}]\" -n \"CLIENT,SERVER\" -c \"black.bgBlue.bold,black.bgGreen.bold\" \"yarn client\" \"yarn server\""
@@ -23,6 +24,7 @@
     "moment": "^2.22.1",
     "puppeteer": "^1.5.0-next.1530061501767",
     "react-spinkit": "^3.0.0",
+    "shelljs": "^0.8.2",
     "sqlite": "^2.9.1",
     "syncprompt": "^2.0.0"
   },
