--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flightplan-tool",
-  "version": "0.1.8",
+  "version": "0.1.",
   "description": "Search for award inventory using Node.js and Headless Chrome!",
   "main": "src/index.js",
   "bin": {
