--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "await-sleep": "^0.0.1",
     "cheerio": "^1.0.0-rc.2",
-    "commander": "^2.15.1",
+    "commander": "github:jd20/commander.js#bin_name_fallback",
     "express": "^4.16.3",
     "moment": "^2.22.1",
     "puppeteer": "^1.5.0-next.1530061501767",
