Migrate flightplan to luxon

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "commander": "github:jd20/commander.js#bin_name_fallback",
     "csv-parse": "^2.5.0",
     "express": "^4.16.3",
+    "humanize-duration": "^3.15.3",
     "jspath": "^0.4.0",
-    "moment": "^2.22.1",
+    "luxon": "^1.4.2",
     "parse-duration": "^0.1.1",
     "puppeteer": "^1.6.0-next.1532381444032",
     "react-spinkit": "^3.0.0",
