--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "better-sqlite3": "^4.1.4",
     "chalk": "^2.4.1",
     "cheerio": "^1.0.0-rc.2",
-    "commander": "github:jd20/commander.js#bin_name_fallback",
+    "commander": "github:jd20/commander.js#master",
     "csv-parse": "^2.5.0",
     "express": "^4.16.3",
     "humanize-duration": "^3.15.3",
