Improved date / time handling - Migrate to moment-timezone from luxon, for performance reasons - Add lightweight and fast timetable handling functions - Fix a few outstanding client bugs

--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "commander": "github:jd20/commander.js#master",
     "csv-parse": "^2.5.0",
     "express": "^4.16.3",
+    "frozen-moment": "^0.4.0",
     "humanize-duration": "^3.15.3",
     "jspath": "^0.4.0",
-    "luxon": "^1.4.2",
+    "moment-timezone": "^0.5.23",
     "parse-duration": "^0.1.1",
     "puppeteer": "^1.6.0-next.1532381444032",
     "shelljs": "^0.8.2",
