Move timetable out to separate library

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "parse-duration": "^0.1.1",
     "puppeteer": "^1.6.0-next.1532381444032",
     "shelljs": "^0.8.2",
-    "syncprompt": "^2.0.0"
+    "syncprompt": "^2.0.0",
+    "timetable-fns": "^0.1.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
