--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flightplan-tool",
-  "version": "0.3.48",
+  "version": "0.3.49",
   "description": "Search for award inventory using Node.js and Headless Chrome!",
   "main": "src/index.js",
   "bin": {
@@ -29,12 +29,13 @@
     "external-ip": "^2.1.1",
     "humanize-duration": "^3.15.3",
     "jspath": "^0.4.0",
+    "moment": "^2.9.0",
     "moment-timezone": "^0.5.23",
     "parse-duration": "^0.1.1",
     "puppeteer": "^1.6.0-next.1532381444032",
     "shelljs": "^0.8.2",
     "syncprompt": "^2.0.0",
-    "timetable-fns": "^0.1.10"
+    "timetable-fns": "^0.1.16"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
