--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "parse-duration": "^0.1.1",
     "puppeteer": "^1.6.0-next.1532381444032",
     "shelljs": "^0.8.2",
+    "sync-request": "6.1.0",
     "syncprompt": "^2.0.0",
-    "timetable-fns": "^0.1.16"
+    "timetable-fns": "^0.1.16",
+    "find-and": "latest"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
