--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "puppeteer": "^1.6.0-next.1532381444032",
     "shelljs": "^0.8.2",
     "syncprompt": "^2.0.0",
-    "timetable-fns": "^0.1.16"
+    "timetable-fns": "^0.1.16",
+    "sync-request": "6.1.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
